--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       margin: 20px auto;
       background-color: #1d1d25;
       color: #1d1d25;
-   
     }
 
     .chart-container {
@@ -405,7 +404,7 @@
     </div>
     <div style="display: flex; justify-content: center;column-gap: 20px;margin-bottom: -40px;">
         <div class="legend-item">
-          <span style="padding-top: 20px;font-size: 0.6rem;">Share of Respondents</span>
+          <span style="padding-top: 20px;font-size: 0.8rem;color:#ADB8E6">Share of Respondents</span>
         </div>
   </div>
   </section>
