--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         
       <!-- X-Axis Labels (Now Horizontal) -->
       <div class="x-axis-labels">
-        <span>0</span>
+        <span>00%</span>
         <span>5%</span>
         <span>10%</span>
         <span>15%</span>
@@ -383,9 +383,9 @@
 
       <!-- Y-Axis Labels -->
       <div class="y-axis-labels">
-        <span>External actors, such<br>as hackers</span>
-        <span>Our own business <br>employees</span>
-        <span>Contractors and partners <br>with legitimate access</span>
+        <span>External actors, such as hackers</span>
+        <span>Our own business employees</span>
+        <span>Contractors and partners with legitimate access</span>
         <span>Our own IT staff</address></span>
         <span>Other</span>
       </div>
