--- a/index.html
+++ b/index.html
@@ -191,7 +191,18 @@
       max-width: 20%;
       font-size: 0.5rem;
       line-height: 1;
+      top: 62px;
+    
+    height: calc(97% - 22%);
         }
+        .x-axis-labels {
+          left: 21%;
+          max-width: 100%;
+          display: flex;
+          justify-content: space-around;
+          width: calc(86% - 7%);
+    }
+        
         .barmain{
 
       margin-left: 18%;}
